Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25902

Clang-tidy check Web page url is wrong.

XMLWordPrintable

    • 74385cc10c9af17e15999e3ac0f34de85882d2b7 (qt-creator/qt-creator/5.0)

      We ship version 12 but link to https://releases.llvm.org/11.0.0/

      When upgrading the clang version, please search for the sources for CLANG-UPGRADE-CHECK and adjust accordingly.

        For Gerrit Dashboard: QTCREATORBUG-25902
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes