src/plugins/cpptools/cpptoolsconstants.h
@@ -95,14 +95,6 @@ const char LOCATOR_FILTER_DISPLAY_NAME[] = QT_TRANSLATE_NOOP("CppTools", "C++ Cl
 const char SYMBOLS_FIND_FILTER_ID[] = "Symbols";
 const char SYMBOLS_FIND_FILTER_DISPLAY_NAME[] = QT_TRANSLATE_NOOP("CppTools", "C++ Symbols");
 
-// CLANG-UPGRADE-CHECK: Checks/update URLs.
-//
-// Upgrade the version in the URL. Note that we cannot use the macro
-// CLANG_VERSION here because it might denote a version that was not yet
-// released (e.g. 6.0.1, but only 6.0.0 was released).
-constexpr const char TIDY_DOCUMENTATION_URL_TEMPLATE[]
-    = "https://releases.llvm.org/11.0.0/tools/clang/tools/extra/docs/clang-tidy/checks/%1.html";
-
 constexpr const char CLANG_STATIC_ANALYZER_DOCUMENTATION_URL[]
     = "https://clang-analyzer.llvm.org/available_checks.html";
 
